@@ -1,0 +1,3 @@
+require File.dirname(__FILE__) + '/../../../../lib/mkrf'
+
+Mkrf::Generator.new('libtrivial')
