@@ -1,3 +1,0 @@
-require File.dirname(__FILE__) + '/../../../lib/mkrf'
-
-Mkrf::Generator.new('libtrivial')
